tests/miniJava/pos/001272_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { while ( 0 . java ( ) ) java = 0 ; } }
