tests/miniJava/neg/006460_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { while int [] java ; ( 0 ) { } } }
